--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "easyMongo",
+  "name": "easy_mongo",
   "version": "0.1.0",
   "description": "An easy mongodb client for node.js based on native mongodb driver.",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/JeremyWei/easyMongo.git"
+    "url": "https://github.com/JeremyWei/easy_mongo.git"
   },
   "keywords": [
     "Mongodb",
@@ -22,7 +22,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/JeremyWei/easyMongo/issues"
+    "url": "https://github.com/JeremyWei/easy_mongo/issues"
   },
   "dependencies": {
     "mocha" : "1.18.2",
